--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -41,7 +41,7 @@ jobs:
         TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
       run: |
         pip install twine
-        twine upload dist/*
+        twine upload dist/* --repository-url https://upload.pypi.org/legacy/
 
     - name: Lint code
       run: |
