--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -4,6 +4,8 @@ name: Upload Python Package
 on:
   release:
     types: [published]
+  workflow_dispatch:
+    types: [published]
 
 permissions:
   contents: read
